--- a/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
+++ b/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
@@ -246,7 +246,7 @@ input[type=radio] {
     }
 }
 
-.placeholder { color: #aaa; }
+.placeholder { color: #72828f; }
 
 /** Styles for a 'toggle switch' checkbox **/
 .checkbox .checkbox-input {
@@ -380,7 +380,7 @@ input[type=radio] {
     background-image: none;
     padding: 10px 6px 6px !important;
     letter-spacing: 0;
-    height: 19px !important;
+    height: 18px !important;
     
 }
 
@@ -1521,7 +1521,7 @@ option {
     color: #999;
     font-size: 13px;
     padding-right: 5px;
-	padding-top: 10px;
+	padding-top: 12px;
 }
 input.datePicker, 
 input.timePicker,
@@ -1983,7 +1983,7 @@ li:hover .show-on-hover {
     pointer-events:none;
 }
 
-.filter-section input:not(.datePicker), select {
+.filter-section input:not(.datePicker), select, .chosen-container {
     margin-right:10px;
 }
 
